--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,20 +1,20 @@
 ---
 namespace: "tcharl"
-name: "freeipa_server"
+name: "acme_ingress"
 version: "1.0.1"
-description: "Role on top of the marvelous Freeipa server role to configure in compliancy with the Osgiliath platform topology"
+description: "Bridges the gap between Cert-manager and Freeipa ACME server"
 
 authors:
   - "Charlie Mordant <cmordant1@gmail.com>"
 
-repository: "https://github.com/OsgiliathEnterprise/freeipa_server"
-documentation: "https://github.com/OsgiliathEnterprise/freeipa_server/blob/master/README.md"
-homepage: "https://github.com/OsgiliathEnterprise/freeipa_server"
-issues: "https://github.com/OsgiliathEnterprise/freeipa_server/issues"
+repository: "https://github.com/OsgiliathEnterprise/acme_ingress"
+documentation: "https://github.com/OsgiliathEnterprise/acme_ingress/blob/master/README.md"
+homepage: "https://github.com/OsgiliathEnterprise/acme_ingress"
+issues: "https://github.com/OsgiliathEnterprise/acme_ingress/issues"
 
 readme: "README.md"
 license:
   - "Apache-2.0"
 tags:
   - "freeipa"
-  - "freeipa-server"
+  - "cert-manager"
