--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  role_name: freeipa_server
+  role_name: acme_ingress
   author: OsgiliathEnterprise
-  description: Wrapper role around freeipa-server role
+  description: Bridges istio and freeipa ACME pki
   company: Osgiliath
   namespace: tcharl
   # If the issue tracker for your role is not on github, uncomment the
