--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "tcharl.freeipa_server"
-version = "0.1.0"
-description = "Freeipa server configuration with a minimum of parameter"
+name = "tcharl.acme_ingress"
+version = "2.0.0"
+description = "Bridges istio and freeipa ACME pki"
 authors = ["Charlie Mordant <cmordant1@gmail.com>"]
 license = "Apache2"
 readme = "README.md"
@@ -15,13 +15,14 @@ python = ">3.10"
 ansible = "^7.5.0"
 jmespath = "^1.0.1"
 netaddr = "^0.8.0"
+kubernetes = "*"
 
 [tool.poetry.group.dev.dependencies]
 ansible-compat = "*"
 flake8 = "*"
 yamllint = "*"
 pytest-testinfra = "*"
-molecule-plugins = {version = "*", extras = ["podman"]}
+molecule-plugins = {version = "*", extras = ["vagrant"]}
 ansible-lint = "*"
 
 [build-system]
