--- a/tasks/tsig.yml
+++ b/tasks/tsig.yml
@@ -20,6 +20,7 @@
   ansible.builtin.command: tsig-keygen -a hmac-sha512 acme-update
   register: tsig_key_entry
   when: tsig_key_present.matched == 0
+  changed_when: yes
   become: yes
 
 - name: Idm | insert tsig key into ipa-ext.conf
